# tonik

./: 404.html  HOW_TO_RELEASE.md  README.md  Thumbs.db  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: grafana_integration.md  index.md  tonik_example.ipynb  user_guide.md
docs/img/: Thumbs.db
examples/: tonik_example.ipynb
grafana_example/: Dockerfile_api  Dockerfile_grafana  docker-compose.yml  grafana.ini
grafana_example/dashboards/: demo_dashboard.json
grafana_example/provisioning/dashboards/: default.yaml
grafana_example/provisioning/datasources/: default.yaml
grafana_integration/: index.html
src/tonik/: __init__.py  api.py  lockerroom.py  storage.py  utils.py  xarray2hdf5.py  xarray2netcdf.py  xarray2zarr.py
src/tonik/package_data/: index.html
src/tsctools/: __init__.py  xarray2hdf5.py
tests/: backend_speed_test.py  conftest.py  test_api.py  test_group.py  test_save.py  test_storage.py  test_utils.py  test_xarray2hdf5.py
tonik_example/: index.html
