[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonik"
version = "0.0.2"
authors = [
  { name="Yannik Behr", email="y.behr@gns.cri.nz" },
  { name="Christof Mueller", email="c.mueller@gns.cri.nz" }
]

description = "A collection of tools to integrate with GNS Science's time series classification platform."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "xarray",
    "pandas",
    "netcdf4",
    "h5netcdf",
    "pytest",
    "python-json-logger"
]

[project.urls]
Homepage = "https://tsc-tools.github.io/tonik.github.io"
Issues = "https://github.com/tsc-tools/tonik/issues"
