[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/site",
  "/docs",
  "/sandbox.ipynb"
]

[project]
name = "tonik"
version = "0.1.14"
authors = [
  { name="Yannik Behr", email="y.behr@gns.cri.nz" },
  { name="Christof Mueller", email="c.mueller@gns.cri.nz" }
]

description = "Store time series data as HDF5 files and access them through an API."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.8",
    "datashader>=0.14",
    "xarray[io,accel,parallel]",
    "pandas>=2.0",
    "netcdf4>=1.6",
    "h5netcdf>=1.1",
    "python-json-logger>=2.0",
    "uvicorn[standard]>=0.22",
    "fastapi>=0.112",
    "matplotlib",
    "zarr>=3.0.3; python_version >= '3.11'",
    "zarr<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest",
       "httpx",
       "ipykernel",
       "mkdocs",
       "mkdocstrings[python]",
       "mkdocs-jupyter"]

[project.urls]
Homepage = "https://tsc-tools.github.io/tonik"
Issues = "https://github.com/tsc-tools/tonik/issues"

[project.scripts]
tonik_api = "tonik.api:main"
test_data = "tonik.utils:main"

[tool.pytest.ini_options]
log_cli = true

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "httpx"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.9"]

[tool.hatch.envs.test.scripts]
run-pytest = "pytest tests"